<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/italian_restaurant_jpg" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Restaurant_name"
        android:textColor="@color/white"
        android:textSize="@dimen/font_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <Button
        android:id="@+id/btn_förrätter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/verdant"
        android:text="@string/förrätter"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_huvudrätter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/verdant"
        android:text="@string/huvudrätter"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_efterrätter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:backgroundTint="@color/verdant"
        android:text="@string/efterrätter"
        android:textSize="@dimen/font_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toEndOf="@+id/btn_förrätter"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_starter1"
        android:layout_width="241dp"
        android:layout_height="140dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="448dp"
        android:gravity="center|top"

        android:text="@string/starter1"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></TextView>

    <TextView
        android:id="@+id/tv_starter2"
        android:layout_width="238dp"
        android:layout_height="140dp"
        android:layout_marginEnd="28dp"
        android:gravity="center|top"
        android:text="@string/starter2"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_starter1"
        app:layout_constraintVertical_bias="0.094">

    </TextView>

    <TextView
        android:id="@+id/tv_starter3"
        android:layout_width="237dp"
        android:layout_height="139dp"
        android:layout_marginEnd="28dp"
        android:gravity="top|center"
        android:text="@string/starter3"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_starter2"
        app:layout_constraintVertical_bias="0.2">

    </TextView>

    <ImageView
        android:id="@+id/iv_förrätt1"
        android:layout_width="114dp"
        android:layout_height="140dp"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204"
        tools:srcCompat="@drawable/bruschetta" />

    <ImageView
        android:id="@+id/iv_förrätt2"
        android:layout_width="114dp"
        android:layout_height="140dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_förrätt1"
        tools:srcCompat="@drawable/mini_pizza" />

    <ImageView
        android:id="@+id/iv_förrätt3"
        android:layout_width="114dp"
        android:layout_height="140dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_förrätt2"
        tools:srcCompat="@drawable/anti_pasti" />

    <Button
        android:id="@+id/btn_avslut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/avslut"
        android:backgroundTint="@color/verdant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_starter3" />


</androidx.constraintlayout.widget.ConstraintLayout>